--- a/Styles/Themes/Material.css
+++ b/Styles/Themes/Material.css
@@ -212,8 +212,9 @@ dialog::backdrop {
 }
 
 code,
-dialog.console {
-	font-family: "Consolas", monospace;
+*.code {
+	font-family: "Cascadia Code", "Consolas", monospace;
+	tab-size: 4;
 }
 
 a {
